# client-server-webrtc-example

client/: example-client.html  example-client.js
client/video/: README.md  relay-server.js  video-sink.html  video-source.html
server/: CMakeLists.txt  bootstrap-deps.cmd  bootstrap.cmd
server/cmake/: helpers.cmake
server/src/: CMakeLists.txt  main.cpp  observers.h  precmp.h
